--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://ascendosrs.com/" />
     
-    <!-- Favicon -->
+    <!-- Favicon and App Icons (Best Practices) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <!-- Legacy and SVG Fallbacks -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo.svg" />
